--- a/style2.css
+++ b/style2.css
@@ -12,6 +12,7 @@ body {
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
     height: 100%;
+    background: rgb(225, 249, 250);
 }
 
 .container {
@@ -23,24 +24,25 @@ body {
 }
 
 #menu {
-    background: whitesmoke;
+    background: rgb(225, 249, 250);
 }
 
 .title {
-    padding: 0 30px;
+    padding: 0 0px;
 }
 
 #menu img {
-    width: 150px;
+    width: 250px;
     height: 150px;
-    border-radius: 50%;
-    margin-top: -20px;
+    margin-top: 0px;
+    /* border-radius: 10%; */
 }
+
 
 .title p {
     font-size: 40px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: indianred;
+    color: crimson;
     margin: 0;
 }
 
@@ -50,7 +52,7 @@ body {
     margin: 3px 0;
     margin-bottom: 30px;
     border-radius: 2px;
-    background: coral;
+    background: crimson;
 }
 
 .menu-item a {
@@ -60,7 +62,7 @@ body {
     padding: 8px 30px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: 12px 0;
-    color: rgb(128, 129, 129);
+    color: rgb(0, 0, 0);
     font-weight: 300;
 
 }
@@ -70,7 +72,7 @@ body {
 }
 
 #food-items {
-    background: whitesmoke;
+    background: rgb(225, 249, 250);
     overflow: auto;
     height: calc(100vh - 86px);
 }
@@ -81,9 +83,10 @@ body {
     align-items: center;
     padding-top: 40px;
     padding-bottom: 10px;
+    padding-left: 10px;
     position: sticky;
     top: 0;
-    background: whitesmoke;
+    background: rgb(225, 249, 250);
     z-index: 1;
 }
 
@@ -102,8 +105,8 @@ body {
 }
 
 .your-address {
-    border: 1px solid indianred;
-    color: indianred;
+    border: 1px solid crimson;
+    color: crimson;
     padding: 5px 10px;
     border-radius: 5px;
     width: 150px;
@@ -147,7 +150,7 @@ body {
 }
 
 .util i:active {
-    color: white;
+    color: rgb(255, 255, 255);
     background: crimson;
 }
 
@@ -165,28 +168,28 @@ body {
 
 #soup #item-card,
 #lineup #item-card {
-    background: rgb(218, 253, 188);
+    background: rgb(74, 144, 250)s;
 }
 
 #entrees #item-card,
 #poBoys #item-card {
-    background: rgb(221, 243, 243);
+    background: rgb(74, 144, 250);
 }
 
 #burger #item-card,
 #dessert #item-card {
-    background: rgb(185, 180, 255);
+    background: rgb(74, 144, 250);
 }
 
 #drink #item-card {
-    background: rgb(238, 255, 0);
+    background: rgb(74, 144, 250);
 }
 
 #category-name,
 .item-menu {
     margin: 10px;
     font-size: 35px;
-    color: coral;
+    color: crimson;
     font-family: 'Aclonica', sans-serif;
 }
 
@@ -197,7 +200,7 @@ body {
     margin: 15px;
     display: inline-block;
     border-radius: 5px;
-    background: rgb(253, 221, 226);
+    background: rgb(74, 144, 250);
     cursor: pointer;
     transition: 0.5s all step-end;
 }
@@ -223,7 +226,7 @@ body {
 .fa-check-circle-o {
     padding: 6px;
     border-radius: 50%;
-    background: white;
+    background: rgb(253, 253, 253);
     cursor: pointer;
 }
 
@@ -245,11 +248,18 @@ body {
 #item-name {
     margin: 5px 0;
     font-weight: 600;
-    color: darkslategray;
+    color: rgb(0, 0, 0);
     font-size: 18px;
 }
 
 #item-price {
+    margin: 0;
+    color: rgb(2, 27, 27);
+    font-weight: 500;
+    font-size: 18px;
+}
+
+#item-desc {
     margin: 0;
     color: rgb(2, 27, 27);
     font-weight: 500;
@@ -265,7 +275,7 @@ body {
 }
 
 #cart-page {
-    background: white;
+    background: rgb(123, 174, 250);
     margin: 40px 10px;
     margin-right: 50px;
     padding: 20px 30px;
@@ -276,7 +286,7 @@ body {
 #cart-title {
     font-size: 35px;
     margin: 0;
-    color: indianred;
+    color: crimson;
 }
 
 #cart-page table {
@@ -294,7 +304,7 @@ body {
     outline: none;
     border: none;
     background: crimson;
-    color: white;
+    color: rgb(14, 13, 13);
     padding: 10px 25px;
     border-radius: 20px;
     font-size: 18px;
@@ -314,8 +324,8 @@ body {
     border: none;
     font-size: 16px;
     background: none;
-    background: lightcoral;
-    color: white;
+    background: crimson;
+    color: rgb(0, 0, 0);
     border-radius: 3px;
     cursor: pointer;
     margin: 0 5px;
@@ -331,7 +341,7 @@ body {
     text-align: center;
     margin: 40px auto;
     border-radius: 5px;
-    background: white;
+    background: rgb(123, 174, 250);
     padding: 10px 20px;
 }
 
@@ -343,16 +353,16 @@ body {
 #total-price,
 #total-item {
     font-size: 25px;
-    color: indianred;
+    color: crimson;
 }
 
 #delievery {
     font-size: 20px;
-    color: limegreen;
+    color: rgb(4, 143, 4);
 }
 
 #cart {
-    background: whitesmoke;
+    background: rgb(225, 249, 250);
     padding-right: 30px;
     overflow-y: scroll;
 }
@@ -361,8 +371,8 @@ body {
     margin: 0;
     font-size: 30px;
     margin-top: 40px;
-    color: indianred;
-    background: whitesmoke;
+    color: crimson;
+    background: rgb(225, 249, 250);
 
 }
 
@@ -395,7 +405,7 @@ body {
     margin: 0 10px;
     text-decoration: none;
     text-transform: capitalize;
-    color: rgb(94, 43, 43);
+    color: black;
 }
 
 .taste-header {
@@ -403,7 +413,7 @@ body {
     padding-bottom: 10px;
     position: sticky;
     top: 0;
-    background: whitesmoke;
+    background: rgb(225, 249, 250);
 }
 
 #mobile-view {
@@ -417,7 +427,6 @@ body {
 #m-total-amount {
     display: none;
 }
-
 
 @media screen and (max-width : 800px) and (-webkit-min-device-pixel-ratio: 2) {
     .container {
@@ -435,7 +444,7 @@ body {
 
     .mobile-top {
         padding: 5px 15px;
-        background: white;
+        background: rgb(225, 249, 250);
         z-index: 1;
     }
 
@@ -467,7 +476,7 @@ body {
 
     .top-menu {
 
-        color: indianred;
+        color: crimson;
     }
 
     .top-menu i {
@@ -479,7 +488,7 @@ body {
 
     .m-cart-toggle {
         color: white;
-        background: lightcoral;
+        background: crimson;
     }
 
     .category-header {
@@ -488,7 +497,7 @@ body {
         overflow-x: scroll;
         position: sticky;
         top: 0;
-        background: white;
+        background: rgb(225, 249, 250);
         z-index: 1;
         border-bottom: 1px solid rgb(219, 219, 219);
         margin: 0;
@@ -523,7 +532,7 @@ body {
 
     .list-name {
         margin: 5px 0;
-        color: coral;
+        color: black;
         width: max-content;
         font-size: 16px;
     }
@@ -537,12 +546,12 @@ body {
         justify-content: space-between;
         align-items: center;
         padding: 5px 15px;
-        background: white;
+        background: rgb(225, 249, 250);
         border-top: 1px solid rgb(219, 219, 219);
     }
 
     .mobile-footer {
-        color: indianred;
+        color: black;
         text-transform: uppercase;
         font-size: 16px;
         position: static;
@@ -564,7 +573,8 @@ body {
     }
 
     #item-name,
-    #item-price {
+    #item-price,
+    #item-desc {
         font-size: 16px;
     }
 
@@ -600,16 +610,16 @@ body {
 
     #m-total-amount {
         display: inline-block;
-        color: lightcoral;
+        color: crimson;
         padding: 5px 10px;
         margin: 0;
-        border: 1px solid lightcoral;
+        border: 1px solid crimson;
         float: right;
     }
 
     .cart-btn {
         font-size: 14px;
-        background: lightcoral;
+        background: crimson;
         padding: 8px 15px;
         margin: auto;
     }
