--- a/style2.css
+++ b/style2.css
@@ -194,8 +194,8 @@ body {
 }
 
 #item-card {
-    width: 250px;
-    height: 220px;
+    width: 350px;
+    height: 300px;
     padding: 15px;
     margin: 15px;
     display: inline-block;
@@ -254,9 +254,10 @@ body {
 
 #item-price {
     margin: 0;
-    color: rgb(2, 27, 27);
+    color: rgb(43, 255, 0);
     font-weight: 500;
     font-size: 18px;
+    font-weight: bold;
 }
 
 #item-desc {
