--- a/style2.css
+++ b/style2.css
@@ -429,36 +429,51 @@ body {
   display: none;
 }
 
-.dropdown.active>.category-name,
-.category-name:hover {
-  color: black
-}
-
-.dropdown {
+.category-name {
+  display: inline-block;
   position: relative;
 }
 
-.dropdown-menu {
-  position: absolute;
+button {
+  border: none;
+  border-radius: 5px;
+  margin-top: 25px;
+  margin-bottom: 25;
+  padding: 15px 550px;
+  font-size: 30px;
+  cursor: pointer;
+  background: rgb(109, 211, 211);
 }
 
-.dropdown-menu {
-  position: absolute;
-  left: 0;
-  top: calc(100% + .25rem);
-  background-color: white;
-  padding: .75rem;
-  border-radius: .25rem;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .1);
-  opacity: .5;
-  pointer-events: none;
-  transform: translateY(-10px);
-  transition: opacity 150ms ease-in-out, transform 150ms ease-in-out;
+button:hover {
+  background-color: rgb(47, 226, 226);
 }
 
-.dropdown.active>.category-name+.dropdown-menu {
-  opacity: 1;
-  transform: translateY(0);
+.category-name-options {
+  display: none;
+  position: absolute;
+  overflow: auto;
+  background: rgb(136, 223, 226);
+  border-radius: 5px;
+  box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.4);
+}
+
+.category-name:hover .category-name-options {
+  display: block;
+}
+
+.category-name-options a {
+  display: block;
+  color: #000000;
+  padding: 5px;
+  text-decoration: none;
+  padding: 20px 40px;
+}
+
+.category-name-options a:hover {
+  color: #0a0a23;
+  background-color: #ddd;
+  border-radius: 5px;
 }
 
 
